--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+      <!-- Background, deberia hacerlo con js, es mas corto y no tengo tango divs que quedan feos -->
+    
     <div class="wrapper">
         <div class="round"></div>
         <div class="round"></div>
