--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-      <!-- Background, deberia hacerlo con js, es mas corto y no tengo tango divs que quedan feos -->
+      <!-- Background -->
     
     <div class="wrapper">
         <div class="round"></div>
